--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM openjdk:17-alpine as builder
 WORKDIR application
-ADD target/kbe-rest-brewery-0.0.1-SNAPSHOT.jar ./
-RUN java -Djarmode=layertools -jar kbe-rest-brewery-0.0.1-SNAPSHOT.jar extract
+ADD maven/${project.build.finalName}.jar ./
+RUN java -Djarmode=layertools -jar ${project.build.finalName}.jar extract
 
 FROM openjdk:17-alpine
 WORKDIR application
